--- a/client/src/pages/Details/Details.module.css
+++ b/client/src/pages/Details/Details.module.css
@@ -108,8 +108,10 @@
 
 .calificacion{
     position: absolute;
+    height: 3.5rem;
+    width: 3.5rem;
     right: 3%;
-    bottom: 8%;
+    bottom: 12.5%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -119,10 +121,10 @@
 
 .puntuResto{
     height: 100%;
-    width: 80%;
-    padding: 14px 0px 14px 0px;
+    width: 100%;
+    padding: 0.8rem 1rem 0.8rem 1rem;
     background-color: rgb(19,209,146);
-    border-radius: 10px 0 10px 0;
+    border-radius: 1rem 0rem 1rem 0rem;
     font-weight: bolder;
     color: white;
     display: flex;
@@ -149,20 +151,6 @@
     align-items: center;
 }
 
-.details{
-    width: 100%;
-    /* height: 20%; */
-    padding: 10px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
-    & i{
-        color: rgb(81, 206, 164);
-        font-size: 2.5em;
-    }
-}
-
 .textito{
     width: 100%;
     height: 80%;
@@ -171,13 +159,6 @@
     justify-content: center;
     align-items: center;
     padding-left: 2rem;
-}
-
-.info{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 .focused{
